syntax = "proto2";
option java_package = "org.webswing.model.browser.proto";
package serverBrowserFrameProto; // javascript namespace

import 'CommonProto.proto';

/* =================== BROWSER -> SERVER ====================*/

message BrowserToServerFrameMsgInProto {
	optional bytes appFrameMsgIn = 1;
	optional commonProto.ConnectionHandshakeMsgInProto handshake = 2;
	repeated TimestampsMsgInProto timestamps = 3;
	repeated commonProto.SimpleEventMsgInProto events = 4;
	optional PlaybackCommandMsgInProto playback = 5;
}

message TimestampsMsgInProto {
    optional string startTimestamp = 1;
    optional string sendTimestamp = 2;
    optional string renderingTime = 3;
    optional uint32 ping = 4;
}

message PlaybackCommandMsgInProto {
    optional PlaybackCommandProto command = 1;

    enum PlaybackCommandProto {
        reset = 0;
        play = 1;
        stop = 2;
        step = 3;
        step10 = 4;
        step100 = 5;
    }
}

/* =================== SERVER -> BROWSER ====================*/

message ServerToBrowserFrameMsgOutProto {
	optional bytes appFrameMsgOut = 1;
	optional ConnectionInfoMsgOutProto connectionInfo = 2;
}

message ConnectionInfoMsgOutProto {
	optional string serverId = 1;
	optional string sessionPoolId = 2;
}
